testsuite/tests/linear/should_fail/LinearVar.stderr
LinearVar.hs:5:5: error: [GHC-25897]
    • Couldn't match type ‘m’ with ‘Many’
      Expected: a %m -> b
        Actual: a -> b
      ‘m’ is a rigid type variable bound by
        the type signature for:
          f :: forall a (m :: GHC.Internal.Types.Multiplicity) b. a %m -> b
        at LinearVar.hs:4:1-14
    • In the expression: undefined :: a -> b
      In an equation for ‘f’: f = undefined :: a -> b
    • Relevant bindings include
        f :: a %m -> b (bound at LinearVar.hs:5:1)

